[metadata]
# replace with your username:
name = blackbox_selectinf
version = 0.0.1
author = Sifan Liu
author_email = sfliu@stanford.edu
description = A package for doing selective inference after a blackbox selection procedure
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src